# sdot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
docs/: INSTALL.md  Makefile  README.md  sdot.bib
examples/: bluenoise.py  discrete_ot.py  icp.py  ot.py
examples/assets/: bunny.off  bunny_simplified.off  circle_left.off  cube.off  fandisk.off  fandisk_simplified.off  hemisphere.off  hemisphere_3.off  hemisphere_smaller.off  hemisphere_top_075.off  plane.off  plane_left.off  ring.off  sphere.off  sphere_4.off  suzanne.off  tachikoma.off  tachikoma_simplified.off  torus.off  torus_double.off  tunnel.off  two_circles.off  two_planes.off  two_spheres.off  u-shape.off
examples/assets/clouds/: circle_1k.cloud  circle_small_1k.cloud  hemisphere_1k.cloud  left_1k.cloud  sphere_1k.cloud  torus_1k.cloud
lib/laguerre/: AD.hpp  density.hpp  gaussian_quadrature.hpp  power_sphere_triangulation_intersection.hpp  predicates_sphere.hpp  surface_triangulation_2.hpp  types.hpp  unordered_pair.hpp  utils.hpp  utils_ad.hpp
scripts/: benchmark_discrete_init.py  clean.sh  makezip.sh  test_discrete_init.py  test_init.py
src/sdot/: aabb_tree.cpp  backend_geogram.cpp  backend_laguerre.cpp  backend_nnrvd.cpp  cgal_utils.cpp  conforming_lloyd_2.hpp  conforming_lloyd_3.hpp
src/sdot/assets/: hemisphere.off  plane_simple.off  sphere.off
src/sdot/backend/: __init__.py  geogram.py  laguerre.py  nnrvd.py
src/sdot/core/: common.py  constants.py  density.py  inout.py
src/sdot/optimal_transport/: __init__.py  initialization.py  interp.py
tests/: test_kantorovich_plane.py  test_kantorovich_surface.py
